傻逼git，合并有的时候行有的时候出错，把我改了半个小时的commit message作废了。
合并到20240319 NoStackMapTableEver！！！
A=增加, B=修复, C=更改, D=删除

A:
	一个新的ASM工具，不进行栈帧验证的同时使用lambda表达式
		TransformUtil#noStackFrameTableEver
		使用lambda代理，完美的绕过StackMapTable

	加入新的文件比较GUI
	BsDiff支持对输入的一部分生成Diff
	AE-Cross支持保存GUI配置到yml
	重构小说整理工具，并加入了转换Epub功能
	XML支持解析注释节点
	重构Zip读写相关代码，抽取一个只读的ZipFile
	加入新的Cpk压缩工具来高效的压缩jar

B:
	优化DirectAccessor#delegate模糊匹配方法的逻辑
	Latin1字符范围是0-255而不是127，删除之前的fast path
	改进Vinary格式的读取性能
	修复MSS协议的bug
	LinkedMyHashMap哈希分布太密集时会栈溢出
	LRUCache无法正常移除缓存
	部分YAML无法解析
	MyDataInputStream的readFully和readAscii不能使用
	HTTP:
		池化的请求被远程终止后可能导致请求失败
		closeGracefully可能会在标准错误上打印异常
	MyPassIs的参数验证不够全面
	在包装的AnsiOut.print函数调用后，被覆盖的BottomLine无法正确的刷新
	循环定时任务无法取消
	asm
		修复了CstTop计算哈希值的bug
		ConstantData#getBytes支持非空的DynByteBuf
		几个toString函数可能产生异常或丢失信息的问题
		修复Nixim之前改包名忘改的部分

C:
	优化getMin2PowerOf函数
	优化7z多线程解压的性能
		source不再缓冲，因为应该没人用int read()
	优化DynByteBuf字符串处理性能，并为IDEA补全优化
	用时间轮重构Scheduler
	重构KeyFile
	铲掉一坨NovelFrame中的**
	AE-Cross使用更多的logger替换println
	MyChat3，正在用Vue写前端
	优化roj.asmx.launcher的资源加载性能，不再使用URLClassLoader
	重构CRC32，支持硬件加速
	重构TextUtil#split和XMLParser，它们可以按照我的设计处理字符串结尾的空格了

D:
	删除FMD大部分功能
	删除很多不再使用的类

合并至20240520 Lavac Hello World！

A=增加, B=修复, C=更改, D=删除

更新Readme
A:
	Minecraft 1.19.2 的服务器协议和3D旋转验证码
	Lavac:
		新增TypeResolver单独处理类型解析
		实现部分API
		加入了一键式的LavaCompiler，编译字符串形式的lambda
	FRP:
		使用Blake3替代不安全的SHA1哈希
		加入了nogui和autorun参数
	为FieldAccessor#getObject增加了基本类型自动包装
	基于ASM的基本类型数组Hasher
	NovelFrame支持循环替换
	DynByteBuf加入hex()和base64()
	基于ASM的事件总线，可继承，可取消注册，并且有错误提示
	加入Asn.1和Der编码的支持
	加入Jar完整性检查
	加入DateParser，方便的解析日期
	加入更高性能的TokenizerX实现便于未来替换Tokenizer
	加入了完美哈希表的实现
	加入了Autoload注解来自动加载类、Nixim或转换器
	加入了两种支持增量修改的分卷7z压缩格式
	加入了QOI图片格式的编码和解码
	QZArchiver现已支持尾部追加模式，在符合条件的情况下，可以减少硬盘写入并提高速度

B:
	定时任务可能意外的取消
	AnsiString#isBgColorRGB错误判断
	完成重构到一半的PacketBuffer
	Pipe本地连接CPU占用率高
	CCYaml和YAMLParser代码不同步
	Feedback CFB未遵循规范
	TextWriter性能很差
	BottomLine无法显示
	随机崩溃（懒常量解析）
	fastZip文件名处理错误（URIUtil.unescapeFileName）
	Mapper#loadCache未正确调用packup
	分卷压缩文件识别错误

